--- a/index.html
+++ b/index.html
@@ -1,277 +1,339 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta name="viewport" content="initial-scale=1.0">
-<title>Picker</title>
-<style>
-body {
-    background:#FFF;
-    color:#000;
-    font-family:verdana, sans-serif;
-    font-size:10pt;
-    margin:0;
-    padding:10px;
-}
+    <meta name="viewport" content="initial-scale=1.0">
+    <title>Runeterra Card Picker</title>
+    <style>
+        body {
+            background: #FFF;
+            color: #000;
+            font-family: verdana, sans-serif;
+            font-size: 10pt;
+            margin: 0;
+            padding: 10px;
+        }
 
-a:link, a:visited {
-    color:#008;
-    font-weight:bold;
-    text-decoration:none;
-}
+        a:link,
+        a:visited {
+            color: #008;
+            font-weight: bold;
+            text-decoration: none;
+        }
 
-a:active, a:hover {
-    color:#ACF;
-}
+        a:active,
+        a:hover {
+            color: #ACF;
+        }
 
-.info {
-    font-weight:bold;
-}
+        .info {
+            font-weight: bold;
+        }
 
-button {
-    font-family:inherit;
-    cursor:pointer;
-    border:0;
-    border-radius:3px;
-    padding:0.3em 0.5em;
-    background:#CCC;
-    color:#000;
-}
+        button {
+            font-family: inherit;
+            cursor: pointer;
+            border: 0;
+            border-radius: 3px;
+            padding: 0.3em 0.5em;
+            background: #CCC;
+            color: #000;
+        }
 
-button:hover {
-    background:#DDD;
-}
+        button:hover {
+            background: #DDD;
+        }
 
-button.disabled {
-    background:#DDD;
-    color:#888;
-    cursor:not-allowed;
-}
+        button.disabled {
+            background: #DDD;
+            color: #888;
+            cursor: not-allowed;
+        }
 
-button.disabled:hover {
-    background:#DDD;
-}
+        button.disabled:hover {
+            background: #DDD;
+        }
 
-#container {
-    position:relative;
-    margin-left:-10px;
-    margin-right:-10px;
-    padding:10px;
-    overflow:hidden;
-}
+        #container {
+            position: relative;
+            margin-left: -10px;
+            margin-right: -10px;
+            padding: 10px;
+            overflow: hidden;
+        }
 
-@media (min-width:1024px) {
-    /* Put the found favorites beside the picking div when the window is sufficiently large */
-    #picking {
-        float:left;
-        width:636px;
-    }
+        @media (min-width:1024px) {
 
-    #secondary {
-        margin-left:646px;
-    }
-}
+            /* Put the found favorites beside the picking div when the window is sufficiently large */
+            #picking {
+                float: left;
+                width: 636px;
+            }
 
-@media (min-width:1300px) {
-    /* Once we get to the point where 636px is less than half of the width of the screen, make the picking div just take up half */
-    #picking {
-        width:50%;
-    }
+            #secondary {
+                margin-left: 646px;
+            }
+        }
 
-    #secondary {
-        margin-left:51%;
-    }
-}
+        @media (min-width:1300px) {
 
-#pick {
-    background:#58F;
-    color:#FFF;
-    font-size:larger;
-    font-weight:bold;
-    width:6em;
-    border-radius:5px;
-    margin-right:10px;
-}
+            /* Once we get to the point where 636px is less than half of the width of the screen, make the picking div just take up half */
+            #picking {
+                width: 50%;
+            }
 
-#pick.disabled {
-    background:#ACF;
-}
+            #secondary {
+                margin-left: 51%;
+            }
+        }
 
-#pick:hover {
-    background:#ACF;
-}
+        #pick {
+            background: #58F;
+            color: #FFF;
+            font-size: larger;
+            font-weight: bold;
+            width: 6em;
+            border-radius: 5px;
+            margin-right: 10px;
+        }
 
-.item-list {
-    padding:0;
-    list-style-type:none;
-    line-height:100px;
-}
+        #pick.disabled {
+            background: #ACF;
+        }
 
-.item-list li {
-    margin:0;
-    display:inline-block;
-    height:100px;
-    width:100px;
-    line-height:100px;
-    border:3px solid transparent;
-    text-align:center;
-    position:relative;
-    vertical-align:top;
-    overflow:hidden;
-    border-radius:100%;
-    background:#F7F7F7;
-    color:#000;
-}
+        #pick:hover {
+            background: #ACF;
+        }
 
-.item-list li img {
-    vertical-align:middle;
-    max-height:100%;
-    max-width:100%;
-}
+        .item-list {
+            padding: 0;
+            list-style-type: none;
+            line-height: 100px;
+        }
 
-.item-list li span {
-    display:inline-block;
-    vertical-align:middle;
-    line-height:1.2;
-}
+        .item-list li {
+            margin: 0;
+            display: inline-block;
+            height: 230px;
+            width: 160px;
+            line-height: 100px;
+            border: 3px solid transparent;
+            text-align: center;
+            position: relative;
+            vertical-align: top;
+            overflow: hidden;
+            background: #F7F7F7;
+            color: #000;
+        }
 
-@media (max-width:636px) {
-    .item-list {
-        line-height:75px;
-    }
+        .item-list li img {
+            vertical-align: middle;
+            max-height: 100%;
+            max-width: 100%;
+        }
 
-    .item-list li {
-        line-height:75px;
-        height:75px;
-        width:75px;
-    }
-}
+        .item-list li span {
+            display: inline-block;
+            vertical-align: middle;
+            line-height: 1.2;
+        }
 
-@media (max-width:423px) {
-    .item-list {
-        line-height:50px;
-    }
+        @media (max-width:636px) {
+            .item-list {
+                line-height: 75px;
+            }
 
-    .item-list li {
-        line-height:50px;
-        height:50px;
-        width:50px;
-    }
-}
+            .item-list li {
+                line-height: 75px;
+                height: 75px;
+                width: 75px;
+            }
+        }
 
-#evaluating li {
-    cursor:pointer;
-}
+        @media (max-width:423px) {
+            .item-list {
+                line-height: 50px;
+            }
 
-#favorites li {
-    cursor:move;
-}
+            .item-list li {
+                line-height: 50px;
+                height: 50px;
+                width: 50px;
+            }
+        }
 
-.item-list li:hover {
-    background:#CDF;
-}
+        #evaluating li {
+            cursor: pointer;
+        }
 
-.item-list.sorting li:hover {
-    background:#F7F7F7;
-}
+        #favorites li {
+            cursor: move;
+        }
 
-#evaluating li.selected {
-    border:3px solid #7AC;
-}
+        .item-list li:hover {
+            background: #CDF;
+        }
 
-#evaluating, #buttons {
-    text-align:center;
-    margin:auto;
-}
+        .item-list.sorting li:hover {
+            background: #F7F7F7;
+        }
 
-#evaluating li.notice {
-    width:auto;
-    height:auto;
-    max-width:260px;
-    margin:auto;
-    background:#F7F7F7;
-    border-radius:10px;
-    padding:30px 30px;
-    color:#000;
-    text-align:center;
-    line-height:1.4;
-    cursor:auto;
-    font-size:10pt;
-}
+        #evaluating li.selected {
+            border: 3px solid #7AC;
+        }
 
-#buttons {
-    margin-top:30px;
-    position:relative;
-    z-index:3;
-}
-</style>
+        #evaluating,
+        #buttons {
+            text-align: center;
+            margin: auto;
+        }
+
+        #evaluating li.notice {
+            width: auto;
+            height: auto;
+            max-width: 260px;
+            margin: auto;
+            background: #F7F7F7;
+            border-radius: 10px;
+            padding: 30px 30px;
+            color: #000;
+            text-align: center;
+            line-height: 1.4;
+            cursor: auto;
+            font-size: 10pt;
+        }
+
+        #buttons {
+            margin-top: 30px;
+            position: relative;
+            z-index: 3;
+        }
+    </style>
 </head>
+
 <body>
-<h1>Picker</h1>
+    <h1>Runeterra Card Picker</h1>
+    <p>For each group of cards presented to you, click one or more of your favorites from that group and press the
+        "Pick" button. Eventually, your favorite will start appearing under "Picked cards". You can continue
+        as long as you like to construct an arbitrarily long list of your favored cards</p>
+    <p>In principle, this picker is perfectly accurate, provided you pick consistently - you'll correctly get your
+        second favorite second, even if it's pitted against your absolute favorite early on, for instance. You can reorder
+        your favorites after you've found them, but in principle you shouldn't need to.</p>
+    <h3>Options</h1>
+    <div id="options">
+        <p>Include rarity:
+            <label><input type="checkbox" name="rarity" class="rarity" value="common"> Common</label>
+            <label><input type="checkbox" name="rarity" class="rarity" value="rare"> Rare</label>
+            <label><input type="checkbox" name="rarity" class="rarity" value="epic"> Epic</label>
+            <label><input type="checkbox" name="rarity" class="rarity" value="champion"> Champion</label>
+            <label><input type="checkbox" name="rarity" class="rarity" value="none"> Non-Collectable</label>
+        </p>
+        <p>Include regions:
+            <label><input type="checkbox" name="region" class="region" value="Bilgewater"> Bilgewater</label>
+            <label><input type="checkbox" name="region" class="region" value="Demacia"> Demacia</label>
+            <label><input type="checkbox" name="region" class="region" value="Freljord"> Freljord</label>
+            <label><input type="checkbox" name="region" class="region" value="Ionia"> Ionia</label>
+            <label><input type="checkbox" name="region" class="region" value="Noxus"> Noxus</label>
+            <label><input type="checkbox" name="region" class="region" value="PiltoverZaun"> Piltover & Zaun</label>
+            <label><input type="checkbox" name="region" class="region" value="ShadowIsles"> Shadow Isles</label>
+            <label><input type="checkbox" name="region" class="region" value="Targon"> Targon</label>
+        </p>
+        <p>Card type:
+            <label><input type="checkbox" name="type" class="type" value="Unit"> Unit</label>
+            <label><input type="checkbox" name="type" class="type" value="Spell"> Spell</label>
+            <label><input type="checkbox" name="type" class="type" value="Ability"> Skill</label>
+        </p>
+        <p><button class="reset">Reset</button></p>
+    </div>
+    <div id="container">
+        <div id="picking">
+            <h2>Pick cards</h2>
+            <ul id="evaluating" class="item-list">
+            </ul>
+            <p id="buttons"><button id="pick">Pick</button> <button id="pass">Pass</button> <button id="undo">Undo</button>
+                <button id="redo">Redo</button></p>
+            <p>Cards remaining to be eliminated before next favorite is found: <span id="remaining"></span></p>
+    
+        </div>
+        <div id="secondary">
+            <h2>Picked cards</h2>
+            <ol id="favorites" class="item-list">
+            </ol>
+        </div>
+    </div>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script src="picker.js"></script>
+    <script src="picker-ui.js"></script>
+    <script src="set.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.7.0/Sortable.min.js"></script>
+    <script>
 
-<p>You can include any content you want here.</p>
+        'use strict';
+        var myPicker = new picker.Picker({
+            items: item_list,
+            localStorageKey: `lor-favorite-picker`,
+            defaultSettings: { 
+                rarity: ["common", "rare", "epic", "champion"],
+                region: ["Bilgewater", "Demacia", "Freljord", "Ionia", "Noxus", "PiltoverZaune", "ShadowIsles", "Targon"],
+                type: ["Unit", "Spell", "Ability"],
+            },
+            shouldIncludeItem: function(item, settings) {
+                var valid = true;
+                valid &= settings.rarity.indexOf(item.rarity) !== -1;
+                valid &= settings.region.indexOf(item.region) !== -1;
+                valid &= settings.type.indexOf(item.type) !== -1;
+                return valid;
+            }
+        });
 
-<div id="container">
+        var pickerUI = new PickerUI(myPicker, {
+            elements: {
+                pick: "#pick",
+                pass: "#pass",
+                undo: "#undo",
+                redo: "#redo",
+                reset: ".reset",
+                evaluating: "#evaluating",
+                favorites: "#favorites",
+                settings: {
+                    rarity: '.rarity',
+                    region: '.region',
+                    type: '.type',
+                }
+            },
+            onUpdate: function (updateType) {
+                var total = this.picker.state.items.length;
+                var current = this.picker.state.arrays.current.length;
+                var favorites = this.picker.state.arrays.favorites.length;
+                var eliminated = this.picker.state.arrays.eliminated.length;
+                var evaluating = this.picker.state.arrays.evaluating.length;
+                var remaining = Math.max(0, total - favorites - eliminated - 1);
 
-<div id="picking">
-<ul id="evaluating" class="item-list">
-</ul>
+                $("#remaining").text(remaining);
+            },
+        });
 
-<p id="buttons"><button id="pick">Pick</button> <button id="pass">Pass</button> <button id="undo">Undo</button> <button id="redo">Redo</button></p>
-</div>
+        pickerUI.initialize();
 
-<div id="secondary">
-<h2>Found favorites</h2>
-
-<ol id="favorites" class="item-list">
-</ol>
-</div>
-</div>
-<script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
-<script src="picker.js"></script>
-<script src="picker-ui.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/sortablejs@1.7.0/Sortable.min.js"></script>
-<script>
-'use strict';
-
-var items = [
-    // Define your items here
-];
-
-var myPicker = new picker.Picker({
-    items: items
-});
-
-var pickerUI = new PickerUI(myPicker, {
-    elements: {
-        pick: "#pick",
-        pass: "#pass",
-        undo: "#undo",
-        redo: "#redo",
-        evaluating: "#evaluating",
-        favorites: "#favorites"
-    }
-});
-
-pickerUI.initialize();
-
-/* Sortable favorites - you can safely remove this, and the Sortable.min.js script, if you don't want to be able to sort your favorite list. */
-var sortable = new Sortable(pickerUI.elem.favorites.get(0), {
-    draggable: '.item',
-    animation: 100,
-    onStart: function() {
-        pickerUI.elem.favorites.addClass("sorting");
-    },
-    onEnd: function() {
-        pickerUI.elem.favorites.removeClass("sorting");
-    },
-    onUpdate: function() {
-        myPicker.setFavorites(pickerUI.elem.favorites.children().map(function() {
-            return pickerUI.getItem(this);
-        }).get());
-        pickerUI.update(true);
-    }
-});
+        /* Sortable favorites - you can safely remove this, and the Sortable.min.js script, if you don't want to be able to sort your favorite list. */
+        var sortable = new Sortable(pickerUI.elem.favorites.get(0), {
+            draggable: '.item',
+            animation: 100,
+            onStart: function () {
+                pickerUI.elem.favorites.addClass("sorting");
+            },
+            onEnd: function () {
+                pickerUI.elem.favorites.removeClass("sorting");
+            },
+            onUpdate: function () {
+                myPicker.setFavorites(pickerUI.elem.favorites.children().map(function () {
+                    return pickerUI.getItem(this);
+                }).get());
+                pickerUI.update(true);
+            }
+        });
 /* End sortable favorites */
-</script>
+    </script>
 </body>
+
 </html>
